[project]
name = "pubmed-paper-fetcher"
version = "0.1.0"
description = ""
authors = [
    {name = "anupama",email = "ruby.13may2000@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "lxml (>=5.3.1,<6.0.0)"
]

[tool.poetry]
packages = [{include = "pubmed_paper_fetcher", from = "src"}]


[tool.poetry.scripts]
get_papers = "pubmed_paper_fetcher.cli:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
